--- a/css/main.css
+++ b/css/main.css
@@ -2711,11 +2711,12 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 }
 .headerSignIn .menuIcons {
   width: 49.19px;
-  height: auto;
+  height: 100vh;
   position: fixed;
   top: 0px;
   right: 0%;
   z-index: 1;
+  background-color: #000000;
   animation: getoff 0.5s linear;
 }
 @keyframes getoff {
@@ -2728,7 +2729,6 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 }
 .headerSignIn .menuIcons ul {
   padding: 5px 0px;
-  background-color: #000000;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -3178,7 +3178,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .tagGetOff {
   position: fixed;
   top: 35%;
-  right: 0%;
+  right: 0px;
   transform: rotate(180deg);
   display: flex;
   justify-content: center;
@@ -3205,6 +3205,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 }
 .tagGetOff .discount .title:hover {
   background-color: #BC2327;
+  transform: translateX(98%) rotate(180deg);
 }
 @keyframes getOff {
   0% {
