--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -322,9 +322,20 @@
                         <div class="containerColor">
                             <div class="smallPic">
                                 <img src="../img/pic25.webp" alt="" class="itemProduct">
+                                <div class="toolTip">
+                                    <p>Color</p>
+                                </div>
                             </div>
-                            <div class="colorBlack"></div>
-                            <div class="colorWhite"></div>
+                            <div class="colorBlack">
+                                <div class="toolTip">
+                                    <p> Black</p>
+                                </div>
+                            </div>
+                            <div class="colorWhite">
+                                <div class="toolTip">
+                                    <p>White</p>
+                                </div>
+                            </div>
                         </div>
                     </article>
                     <article class="size">
@@ -341,6 +352,9 @@
                     <article class="addToCart">
                         <button type="button" class="btnAddToCart">Add to cart</button>
                         <img class="wishlistIcon" src="../img/wishlist_Icon.svg" alt="">
+                        <div class="toolTip">
+                            <p class="toolTipMessage">Wishlist</p>
+                        </div>
                     </article>
                     <article class="complementInfo">
                         <div class="delivery">
