--- a/scss/_show_Room.scss
+++ b/scss/_show_Room.scss
@@ -67,15 +67,40 @@
                     flex-direction: row;
                     align-items: flex-start;
                     gap:20px;
+                    position: relative;
+
                     .smallPic{
-                        overflow: hidden;
+                        position: relative;
+                        .toolTip{
+                            opacity:0;
+                            visibility: hidden;
+                            position:absolute;
+                            top:-40%;
+                            left:10px;
+                            transform: translateY(100%);
+                            transition:all 0.3s ease-in-out;
+                            p{
+                                background-color: #000000;
+                                padding: 5px 10px;
+                                font-size: 0.7rem;
+                                font-weight: 700;
+                                color: #ffffff;
+                                font-family: $fontJura;
+                            }
+                        }
                         .itemProduct{
                             width:70px;
                             height:auto;
                             object-fit: cover;
                             border: 1px solid #f1f1f1;
+                            transition: all 0.3s ease-in-out;
                             &:hover{
                                 border: 1px solid #000000;
+                            }
+                            &:hover + .toolTip{
+                                opacity: 1;
+                                visibility: visible;
+                                transform: translateY(0%);
                             }
                         }
                     }
@@ -83,10 +108,34 @@
                         cursor:pointer;
                         width:70px;
                         height:104px;
+                        position: relative;
                         background-color: #555555;
                         border:1px solid #f1f1f1;
+                        transition: all 0.3s ease-in-out;
                         &:hover{
                             border: 1px solid #000000;
+                        }
+                        &:hover > .toolTip{
+                            opacity: 1;
+                            visibility: visible;
+                            transform: translateY(0%);
+                        }
+                        .toolTip{
+                            opacity:0;
+                            visibility: hidden;
+                            position:absolute;
+                            top:-40%;
+                            left:10px;
+                            transform: translateY(100%);
+                            transition:all 0.3s ease-in-out;
+                            p{
+                                background-color: #000000;
+                                padding: 5px 10px;
+                                font-size: 0.7rem;
+                                font-weight: 700;
+                                color: #ffffff;
+                                font-family: $fontJura;
+                            }
                         }
                     }
                     .colorWhite{
@@ -138,6 +187,7 @@
                 align-items: center;
                 gap:20px;
                 margin: 20px auto;
+                position: relative;
                 .btnAddToCart{
                     width:100%;
                     height: 50px;
@@ -164,6 +214,31 @@
                     border: 1px solid #f1f1f1;
                     &:hover{
                         border: 1px solid #000000;
+                    }
+                    &:hover + .toolTip{
+                        opacity:1;
+                        visibility: visible;
+                        transform: translateY(0%);
+                    }
+                }
+                .toolTip{
+                    width:auto;
+                    height: auto;
+                    cursor:pointer;
+                    opacity: 0;
+                    visibility: hidden;
+                    position:absolute;
+                    top:-80%;
+                    right:-10px;
+                    background-color: rgb(0, 0, 0);
+                    transform: translateY(100%);
+                    transition: all 0.2s ease-in-out;
+                    .toolTipMessage{
+                        margin: 5px 10px;
+                        font-size: 0.7rem;
+                        font-weight: 700;
+                        color: #ffffff;
+                        font-family: $fontJura;
                     }
                 }
             }
@@ -219,7 +294,6 @@
                         display: flex;
                         flex-direction: row;
                         justify-content: space-around;
-                        // align-items: center;
                         gap:5px;
                         .case{
                             width:100%;
