--- a/views/store.html
+++ b/views/store.html
@@ -126,7 +126,7 @@
 
         <!-- Tag GetOff -->
 
-        <section class="tagGetOff">
+        <section class="tagGetoff">
             <article class="discount">
                 <label for="cross">
                     <h2 class="title">Get 25% Off</h2>
