--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -2,7 +2,7 @@
 
 .containerStore{
     margin: 100px auto 150px;
-    .tagGetOff{
+    .tagGetoff{
         position: fixed;
         top:35%;
         right:0%;
