Updating transition itemSize

--- a/css/main.css
+++ b/css/main.css
@@ -4046,6 +4046,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all 0.3s ease-in-out;
 }
 .showRoom .rightSide .infoProduct .size .containerSize .itemSize:hover {
   border: 1px solid #000000;
