--- a/scss/_show_Room.scss
+++ b/scss/_show_Room.scss
@@ -173,6 +173,7 @@
                         display:flex;
                         justify-content: center;
                         align-items: center;
+                        transition: all 0.3s ease-in-out;
                         &:hover{
                             border: 1px solid #000000;
                         }
