--- a/scss/_filter.scss
+++ b/scss/_filter.scss
@@ -14,6 +14,7 @@
             }
         }
         .headLine{
+            position: relative;
             .filter{
                 position: fixed;
                 top:70px;
@@ -32,12 +33,28 @@
                     padding: 5px;
                     margin: 5px;
                     box-shadow: 0 0 4px 2px #707070;
+                    // transition: all 0.3s ease-in-out;
+                    &:hover + .filterWord{
+                        opacity: 1;
+                        visibility:visible;
+                        transform: translateY(100%);
+                    }
                 }
                 .filterWord{
+                    opacity: 0;
+                    visibility: hidden;
                     font-size: 0.8rem;
                     font-family: $fontJura;
-                    color: #D9D9D9;
+                    font-weight: 600;
+                    color: #ffffff;
                     font-weight: 400;
+                    background-color: #000000;
+                    padding: 5px 15px;
+                    position: absolute;
+                    top:25px;
+                    left:0px;
+                    transform: translateY(50%);
+                    transition: all 0.3s ease-in-out;
                 }
             }
         }
