--- a/views/sign_In_&_Create_Account.html
+++ b/views/sign_In_&_Create_Account.html
@@ -259,18 +259,18 @@
             </label>
                 <nav class="menuWishlist">
                     <div class="choiceWishlist">
-                        <h3 class="wishlistWord">WhishList</h3>
+                        <h3 class="wishlistWord">WishList</h3>
                         <div class="wish">
                             <article class="category">
                                 <h3 class="titleWishlist">Item</h3>
                                 <h3 class="titleWishlist">Pricing</h3>
-                                <h3 class="titleWishlist">Whish</h3>
+                                <h3 class="titleWishlist">Wish</h3>
                             </article>
                             <article class="wishlist">
                                 <div class="blockProduct">
                                     <img class="itemProduct" src="../img/pic24.webp" alt="Product pic">
                                     <div class="description">
-                                        <p class="price">$499</p>
+                                        <p class="wishPrice">$499</p>
                                         <div class="icons">
                                             <img src="../img/trash_Icon.svg" alt="Trash icon">
                                             <img src="../img/edit_Icon.svg" alt="Edit icon">
@@ -283,7 +283,7 @@
                                 <div class="blockProduct">
                                     <img class="itemProduct" src="../img/pic25.webp" alt="Product pic">
                                     <div class="description">
-                                        <p class="price">$499</p>
+                                        <p class="wishPrice">$499</p>
                                         <div class="icons">
                                             <img src="../img/trash_Icon.svg" alt="Trash icon">
                                             <img src="../img/edit_Icon.svg" alt="Edit icon">
