--- a/scss/_filter.scss
+++ b/scss/_filter.scss
@@ -67,22 +67,21 @@
             margin: 50px 0px;
         }
         .menuFilter{
-            width:20vw;
-            height:100vh;
-            display:flex;
+            width: 20vw;
+            height: 100vh;
+            display: flex;
             position: fixed;
-            top:0;
-            left:0;
-            z-index: 10px;
+            top: 0;
+            left: 0;
             flex-direction: column;
-            justify-content:center;
+            justify-content: center;
             align-items: flex-start;
             background-color: #ffffff;
             overflow: hidden;
             box-shadow: 0 0 10px 6px #070707;
             z-index: 10;
             transform: translate(-105%);
-            transition: .3s ease-in-out;
+            transition: 0.3s ease-in-out;
             label{
                 .closeCross{
                     width:15px;
@@ -127,7 +126,7 @@
                         margin: 15px 0px;
                     }
                     .availability, .pricing{
-                        font-size: 1rem;
+                        font-size: 0.9rem;
                         font-family: $fontJura;
                         color:#424242;
                         .labelOne, .labelTwo, .labelThree{
