--- a/scss/_show_Room.scss
+++ b/scss/_show_Room.scss
@@ -7,7 +7,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
-    margin: 100px auto;
+    margin: 150px auto;
     // overflow: hidden;
     font-family: $fontJura;
     .leftSide, .rightSide{
@@ -68,9 +68,9 @@
                     align-items: flex-start;
                     gap:20px;
                     position: relative;
-
                     .smallPic{
                         position: relative;
+                        cursor:pointer;
                         .toolTip{
                             opacity:0;
                             visibility: hidden;
@@ -363,12 +363,14 @@
         }
     }
 }
-.newArrivals{
+
+#containerNewArrivals{
+    margin-bottom:150px;
     .title{
         font-size:2rem;
         font-family: $fontRubik;
         color: #BC2327;
         text-align: center;
-        margin-bottom: 30px;
+        margin-bottom: 100px;
     }
 }
