--- a/scss/_sign_In_&_Create_Account.scss
+++ b/scss/_sign_In_&_Create_Account.scss
@@ -89,7 +89,6 @@
                     z-index: 1;
                     .tag{
                         position: fixed;
-                        /* top:136px; */
                         top:-10px;
                         right:-45px;
                         transform: rotate(180deg);
@@ -316,57 +315,12 @@
         }
     }
 
-
 // Menu
 
 .headerSignIn{
     width:20vw;
     height: 100vh;
     position: relative;
-    // right:0%;
-    // width:20vw;
-    // height: 100vh;
-    // position: fixed;
-    // top:0;
-    // right:0;
-    // background-color:#1b1b1b;
-    // box-shadow: 0 0 10px 6px #070707;
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: space-between;
-    // align-items: center;
-    // padding:0px 30px;
-    // z-index: 10;
-    // label{
-    //     .drawerIcon{
-    //         width:40px;
-    //         height: 40px;
-    //         cursor: pointer;
-    //         position: fixed;
-    //         top:10px;
-    //         right:20px;
-    //         z-index: 10;
-    //         border-radius: 50%;
-    //         padding: 5px;
-    //         background-color: #000000;
-    //         transition: transform 0.3s ease-in-out;
-    //         &:hover{
-    //             transform: translateY(0%) scale(105%);
-    //             filter:drop-shadow(0 0 6px #BC2327);
-    //         }
-    //         animation: drawer 2s linear infinite;
-    //         @keyframes drawer{
-    //             0%{
-    //                 filter:drop-shadow(0 0 2px #BC2327);
-    //                 transform: scale(100%);
-    //             }
-    //             100%{
-    //                 filter:drop-shadow(0 0 6px #BC2327);
-    //                 transform: scale(103%);
-    //             }
-    //         }
-    //     }
-    // }
     .menuIcons{
         width:49.19px;
         height:100vh;
@@ -451,7 +405,6 @@
         height: 100vh;
         position: fixed;
         top:0%;
-        // right:-50%;
         left:125%;
         display:flex;
         flex-direction: column;
@@ -508,7 +461,7 @@
                         padding-bottom:10px;
                         padding-left: 30px;
                         padding-right: 100px;
-                        font-size: 1rem;
+                        font-size: 0.9rem;
                         font-family: $fontJura;
                         color:#ffffff;
                         font-weight: 600;
@@ -523,7 +476,7 @@
                         .link{
                             display: block;
                             width:100%;
-                            font-size: 1rem;
+                            font-size: 0.9rem;
                             font-family: $fontJura;
                             color:#ffffff;
                             font-weight: 600;
@@ -549,7 +502,7 @@
             padding-top: 10px;
             p{
                 width:100%;
-                font-size: 1rem;
+                font-size: 0.9rem;
                 font-family: $fontJura;
                 color:#ffffff;
                 font-weight: 600;
@@ -675,7 +628,7 @@
                             display: flex;
                             flex-direction: column;
                             .price{
-                                font-size: 1rem;
+                                font-size: 0.9rem;
                                 font-family: $fontJura;
                                 color:#424242;
                                 font-weight: 600;
@@ -692,14 +645,14 @@
                                 width:50px;
                                 height:35px;
                                 padding: 2px;
-                                font-size: 1rem;
+                                font-size: 0.9rem;
                                 font-family:$fontJura;
                                 color:#BC2327;
                                 font-weight: 600;
                             }
                         }
                         .total{
-                            font-size: 1rem;
+                            font-size: 0.9rem;
                             font-family: $fontJura;
                             color:#BC2327;
                             font-weight: 600;
@@ -720,7 +673,7 @@
                     .shipping, .discount, .total{
                         margin: 2px;
                         width: inherit;
-                        font-size: 1rem;
+                        font-size: 0.9rem;
                         font-family: $fontJura;
                         color:#424242;
                         font-weight: 600;
@@ -847,8 +800,8 @@
                             display: flex;
                             flex-direction: column;
                             margin-left:-40px;
-                            .price{
-                                font-size: 1rem;
+                            .wishPrice{
+                                font-size: 0.9rem;
                                 font-family:$fontJura;
                                 color:#BC2327;
                                 font-weight: 600;
@@ -896,8 +849,7 @@
             transition: all 0.3s ease;
             &:hover{
                 background-color: #BC2327;
-                transform: translateX(40%) rotate(180deg);
-                // box-shadow: 0 0 4px 2px #BC2327;
+                transform: translateX(15%) rotate(180deg);
             }
         }
         @keyframes getOff{
