--- a/scss/_wish_List.scss
+++ b/scss/_wish_List.scss
@@ -85,8 +85,8 @@
                             display: flex;
                             flex-direction: column;
                             margin-left:-40px;
-                            .price{
-                                font-size: 1rem;
+                            .wishPrice{
+                                font-size: 0.9rem;
                                 font-family: $fontJura;
                                 color:#BC2327;
                                 font-weight: 600;
