--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -200,18 +200,18 @@
             </label>
                 <nav class="menuWishlist">
                     <div class="choiceWishlist">
-                        <h3 class="wishlistWord">WhishList</h3>
+                        <h3 class="wishlistWord">WishList</h3>
                         <div class="wish">
                             <article class="category">
                                 <h3 class="titleWishlist">Item</h3>
                                 <h3 class="titleWishlist">Pricing</h3>
-                                <h3 class="titleWishlist">Whish</h3>
+                                <h3 class="titleWishlist">Wish</h3>
                             </article>
                             <article class="wishlist">
                                 <div class="blockProduct">
                                     <img class="itemProduct" src="../img/pic24.webp" alt="Product pic">
                                     <div class="description">
-                                        <p class="price">$499</p>
+                                        <p class="wishPrice">$499</p>
                                         <div class="icons">
                                             <img src="../img/trash_Icon.svg" alt="Trash icon">
                                             <img src="../img/edit_Icon.svg" alt="Edit icon">
@@ -224,7 +224,7 @@
                                 <div class="blockProduct">
                                     <img class="itemProduct" src="../img/pic25.webp" alt="Product pic">
                                     <div class="description">
-                                        <p class="price">$499</p>
+                                        <p class="wishPrice">$499</p>
                                         <div class="icons">
                                             <img src="../img/trash_Icon.svg" alt="Trash icon">
                                             <img src="../img/edit_Icon.svg" alt="Edit icon">
@@ -452,7 +452,7 @@
 
         <!-- New Arrivals -->
 
-        <section class="newArrivals" id="newArrivals">
+        <section class="newArrivals" id="containerNewArrivals">
             <h3 class="title">"If you're interested, you can also check out our new outfits."</h3>
             <div class="sectionCard d-flex flex-direction-row">
                 <article class="cardProducts m-0">
