--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&family=Rubik+Distressed&display=swap");
-/* Variables */
-/* Font */
-/* Color System */
-/* Txt */
-/* Background */
-/* Box-Shadow */
-/* Margin */
-/* Padding */
-/* Containers */
-/* Width-Size */
 * {
   margin: 0px;
   padding: 0px;
@@ -16,7 +6,7 @@
 }
 
 body {
-  background-color: #ffffff;
+  background-color: #131313;
 }
 
 html .mainContainer {
@@ -45,7 +35,7 @@ html .mainContainer .sectionShop {
   z-index: 10;
   padding-top: 30px;
   transform: translate(105%);
-  transition: 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 html .mainContainer .sectionShop .menuCart .cartShop .closeCross {
   width: 15px;
@@ -75,9 +65,9 @@ html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist {
 }
 html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cartlistWord {
   width: inherit;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-family: "Jura", sans-serif;
-  color: #BC2327;
+  color: #bc2327;
   font-weight: 600;
   margin: 0px;
 }
@@ -92,7 +82,7 @@ html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .
 html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .category .titleCartlist {
   font-size: 1rem;
   font-family: "Jura", sans-serif;
-  color: #BC2327;
+  color: #bc2327;
   font-weight: 600;
   margin: 15px 0px;
 }
@@ -115,9 +105,9 @@ html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .
   flex-direction: column;
 }
 html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .description .price {
-  font-size: 0.9em;
+  font-size: 0.9rem;
   font-family: "Jura", sans-serif;
-  color: #424242;
+  color: #191919;
   font-weight: 600;
 }
 html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .description .icons img {
@@ -130,13 +120,13 @@ html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .
   padding: 2px;
   font-size: 0.9rem;
   font-family: "Jura", sans-serif;
-  color: #BC2327;
+  color: #bc2327;
   font-weight: 600;
 }
 html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .total {
-  font-size: 0.9em;
+  font-size: 0.9rem;
   font-family: "Jura", sans-serif;
-  color: #BC2327;
+  color: #bc2327;
   font-weight: 600;
 }
 html .mainContainer .sectionShop .menuCart .menuCartlist .outcomeCard {
@@ -154,13 +144,13 @@ html .mainContainer .sectionShop .menuCart .menuCartlist .outcomeCard .outcome .
   width: inherit;
   font-size: 0.9rem;
   font-family: "Jura", sans-serif;
-  color: #424242;
+  color: #191919;
   font-weight: 600;
   display: flex;
   justify-content: space-between;
 }
 html .mainContainer .sectionShop .menuCart .menuCartlist .outcomeCard .outcome .total {
-  color: #BC2327;
+  color: #bc2327;
   font-weight: 700;
 }
 html .mainContainer .sectionShop .menuCart .menuCartlist .outcomeCard .btnCheckout {
@@ -176,11 +166,11 @@ html .mainContainer .sectionShop .menuCart .menuCartlist .outcomeCard .btnChecko
   font-weight: 600;
   color: #ffffff;
   border: 1px solid transparent;
-  background-color: #070707;
-  transition: all 0.3s ease;
+  background-color: #000000;
+  transition: all 0.3s ease-in-out;
 }
 html .mainContainer .sectionShop .menuCart .menuCartlist .outcomeCard .btnCheckout:hover {
-  color: #070707;
+  color: #000000;
   background-color: #ffffff;
   border: 1px solid #000000;
   font-weight: 600;
@@ -208,7 +198,7 @@ html .mainContainer .sectionWishlist {
   z-index: 10;
   padding-top: 60px;
   transform: translate(105%);
-  transition: 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 html .mainContainer .sectionWishlist .wishHeadLine .closeCross {
   width: 15px;
@@ -232,9 +222,9 @@ html .mainContainer .sectionWishlist .menuWishlist .choiceWishlist {
 }
 html .mainContainer .sectionWishlist .menuWishlist .choiceWishlist .wishlistWord {
   width: inherit;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-family: "Jura", sans-serif;
-  color: #BC2327;
+  color: #bc2327;
   font-weight: 600;
   margin: 0px;
 }
@@ -249,7 +239,7 @@ html .mainContainer .sectionWishlist .menuWishlist .choiceWishlist .wish .catego
 html .mainContainer .sectionWishlist .menuWishlist .choiceWishlist .wish .category .titleWishlist {
   font-size: 1rem;
   font-family: "Jura", sans-serif;
-  color: #BC2327;
+  color: #bc2327;
   font-weight: 600;
   margin: 15px 0px;
 }
@@ -272,7 +262,7 @@ html .mainContainer .sectionWishlist .menuWishlist .choiceWishlist .wish .wishli
 html .mainContainer .sectionWishlist .menuWishlist .choiceWishlist .wish .wishlist .blockProduct .description .price {
   font-size: 1rem;
   font-family: "Jura", sans-serif;
-  color: #BC2327;
+  color: #bc2327;
   font-weight: 600;
 }
 html .mainContainer .sectionWishlist .menuWishlist .choiceWishlist .wish .wishlist .blockProduct .description .icons img {
@@ -284,11 +274,11 @@ html .mainContainer .bannerShipping {
   margin-top: 70px;
 }
 html .mainContainer .bannerShipping .shipping {
-  color: #BC2327;
+  color: #bc2327;
   font-size: 0.8rem;
   font-weight: 700;
   font-family: "Jura", sans-serif;
-  text-align: center;
+  text-align: 700;
   text-transform: uppercase;
   animation: shipping 4s linear;
 }
@@ -335,10 +325,10 @@ html .mainContainer .tagGetOff .discount .title {
   cursor: pointer;
   background-color: #000000;
   padding: 40px 15px;
-  transition: all 0.3s ease;
+  transition: all 0.3s ease-in-out;
 }
 html .mainContainer .tagGetOff .discount .title:hover {
-  background-color: #BC2327;
+  background-color: #bc2327;
 }
 @keyframes getOff {
   0% {
@@ -358,11 +348,11 @@ html .mainContainer .arrowUp .directionUp .arrowUpIcon {
   width: 45px;
   border-radius: 50%;
   border: 2px solid white;
-  transition: all 0.3s ease;
+  transition: all 0.3s ease-in-out;
 }
 html .mainContainer .arrowUp .directionUp .arrowUpIcon:hover {
-  background-color: #BC2327;
-  border: 2px solid #BC2327;
+  background-color: #bc2327;
+  border: 2px solid #bc2327;
 }
 html .mainContainer .skullSocialMedia {
   position: fixed;
@@ -628,12 +618,12 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .heroSection .heroSectionCentered .info .break {
   font-size: 4.5rem;
   font-family: "Rubik Distressed", cursive;
-  color: #9A9A9A;
+  color: #9a9a9a;
 }
 .heroSection .heroSectionCentered .info .subtitle {
   font-size: 2.5rem;
   font-family: "Jura", sans-serif;
-  color: #BC2327;
+  color: #bc2327;
   font-weight: 600;
   margin-top: -45px;
 }
@@ -648,7 +638,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   font-weight: 600;
   font-size: 1.2rem;
   color: #191919;
-  background-color: #9A9A9A;
+  background-color: #9a9a9a;
   margin-right: 5px;
   text-decoration: none;
   box-shadow: 1px 5px 6px 2px #363636;
@@ -663,7 +653,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 }
 .heroSection .heroSectionCentered .info .cta .ctaNewArrivals {
   color: #ffffff;
-  background-color: #BC2327;
+  background-color: #bc2327;
 }
 @keyframes info {
   0% {
@@ -683,14 +673,15 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   font-size: 1rem;
   font-family: "Jura", sans-serif;
   font-weight: 600;
+  color: #9a9a9a;
 }
 .heroSection .heroSectionCentered .info .promo .ctaShowRoom {
-  color: #BC2327;
+  color: #bc2327;
   text-decoration: none;
   transition: all 0.3s ease;
 }
 .heroSection .heroSectionCentered .info .promo .ctaShowRoom:hover {
-  color: #858585;
+  color: #9a9a9a;
   text-decoration: underline;
 }
 .heroSection .laptop {
@@ -900,7 +891,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   font-size: 3.5rem;
   font-family: "Jura", sans-serif;
   font-weight: 600;
-  color: #E0E0E0;
+  color: #f1f1f1;
 }
 .advertising .advertisingMood .subtitle:nth-child(1) {
   opacity: 1;
@@ -1008,7 +999,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .bestSellers .subtitle {
   font-size: 4rem;
   font-family: "Rubik Distressed", cursive;
-  color: #BC2327;
+  color: #bc2327;
   text-align: center;
   margin-bottom: 100px;
 }
@@ -1017,7 +1008,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   height: auto;
   cursor: pointer;
   overflow: hidden;
-  transition: all 0.3s ease;
+  transition: all 0.3s ease-in-out;
 }
 .bestSellers .sectionCard .cardProducts:hover {
   box-shadow: 0 0 4px 2px #707070;
@@ -1037,8 +1028,8 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  color: #D9D9D9;
-  font-weight: 500;
+  color: #191919;
+  font-weight: 600;
   font-family: "Jura", sans-serif;
   margin-top: 20px;
   padding: 20px;
@@ -1056,12 +1047,12 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   width: 100%;
   text-align: center;
   padding: 5px;
-  color: #D9D9D9;
+  color: #ffffff;
   font-weight: 600;
   font-family: "Jura", sans-serif;
-  background-color: #BC2327;
+  background-color: #bc2327;
   text-decoration: none;
-  transition: all 0.3s ease;
+  transition: all 0.3s ease-in-out;
 }
 .bestSellers .sectionCard .cardProducts .article .info .linkStore:hover {
   color: #ffffff;
@@ -1074,8 +1065,8 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   object-position: center top;
   vertical-align: middle;
   filter: grayscale(10%);
-  box-shadow: 0 0 4px 2px rgb(112, 112, 112);
-  transition: all 0.3s ease;
+  box-shadow: 0 0 4px 2px 0 0 4px 2px #707070;
+  transition: all 0.3s ease-in-out;
 }
 .bestSellers .sectionCard .cardProducts .article .outFit:hover ~ .info {
   transform: translateY(-110%);
@@ -1086,16 +1077,16 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   margin: 70px auto 0px;
   width: 200px;
   padding: 20px 40px;
-  color: #d9d9d9;
+  color: #ffffff;
   font-family: "Jura", sans-serif;
   font-weight: 700;
-  background-color: #3f3f3f;
+  background-color: #3d3d3d;
   text-decoration: none;
   transition: all 0.3s ease;
 }
 .bestSellers .ctaStore:hover {
   background-color: #BC2327;
-  box-shadow: 0 0 4px 2px rgb(112, 112, 112);
+  box-shadow: 0 0 4px 2px #707070;
   text-decoration: underline;
 }
 
