--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -6,13 +6,13 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #ffffff;
-    // background-color: #131313;
+    // background-color: #ffffff;
+    background-color: #131313;
 }
 html{
     .mainContainer{
-        width: 100%;
-        height: 100%;
+        width: $screenPercentageWidth;
+        height: $screenPercentageHeight;
         #cart{
             display: none;
             &:checked ~ .sectionShop{
@@ -29,13 +29,13 @@ html{
             flex-direction: column;
             justify-content:space-between;
             align-items: center;
-            background-color: #ffffff;
+            background-color: $whiteColor;
             overflow: hidden;
-            box-shadow: 0 0 10px 6px #070707;
+            box-shadow:$boxShadowMenu ;
             z-index: 10;
             padding-top: 30px;
             transform: translate(105%);
-            transition: .3s ease-in-out;
+            transition: $transition;
             .menuCart{
                 .cartShop{
                     .closeCross{
@@ -45,7 +45,7 @@ html{
                         top:20px;
                         left:40px;
                         transform: rotate(0deg);
-                        transition: all 0.3s ease-in-out;
+                        transition: $transition;
                         &:hover{
                             transform: rotate(90deg);
                         }
@@ -58,7 +58,7 @@ html{
                         flex-direction:column;
                         justify-content: space-between;
                         align-items:flex-start;
-                        margin: 0px auto;
+                        margin: $neutralMargin;
                         padding: 0px 20px;
                         height: 380px;
                         overflow: scroll;
@@ -67,10 +67,10 @@ html{
                         left:20px;
                         .cartlistWord{
                             width: inherit;
-                            font-size: 1.3rem;
+                            font-size: $MediumTitle;
                             font-family: $fontJura;
-                            color:#BC2327;
-                            font-weight: 600;
+                            color:$primaryColor;
+                            font-weight: $bold;
                             margin:0px ;
                         }
                         .cart{
@@ -82,10 +82,10 @@ html{
                                 padding: 20px 0px;
                                 border-bottom: 1px solid #e4e4e4;
                                 .titleCartlist{
-                                    font-size: 1rem;
+                                    font-size: $regularText;
                                     font-family: $fontJura;
-                                    color:#BC2327;
-                                    font-weight: 600;
+                                    color:$primaryColor;
+                                    font-weight: $bold;
                                     margin: 15px 0px;
                                 }
                             }
@@ -95,9 +95,9 @@ html{
                                 justify-content: space-between;
                                 align-items: center;
                                 padding: 20px 0px;
-                                border-bottom: 1px solid #e4e4e4;
+                                border-bottom: $borderBottom;
                                 .total{
-                                    font-size: 1rem;
+                                    font-size: $regularText;
                                 }
                                 .itemProduct{
                                     width:12%;
@@ -106,10 +106,10 @@ html{
                                     display: flex;
                                     flex-direction: column;
                                     .price{
-                                        font-size: 0.9em;
+                                        font-size: $smallText;
                                         font-family: $fontJura;
-                                        color:#424242;
-                                        font-weight: 600;
+                                        color:$tertiaryColor;
+                                        font-weight: $bold;
                                     }
                                     .icons{
                                         img{
@@ -123,17 +123,17 @@ html{
                                         width:50px;
                                         height:35px;
                                         padding: 2px;
-                                        font-size: 0.9rem;
+                                        font-size: $smallText;
                                         font-family: $fontJura;
-                                        color:#BC2327;
-                                        font-weight: 600;
+                                        color:$primaryColor;
+                                        font-weight: $bold;
                                     }
                                 }
                                 .total{
-                                    font-size: 0.9em;
+                                    font-size: $smallText;
                                     font-family: $fontJura;
-                                    color:#BC2327;
-                                    font-weight: 600;
+                                    color:$primaryColor;
+                                    font-weight: $bold;
                                 }
                             }
                         }
@@ -151,17 +151,17 @@ html{
                             .shipping, .discount, .total{
                                 margin: 2px;
                                 width: inherit;
-                                font-size: 0.9rem;
+                                font-size: $smallText;
                                 font-family: $fontJura;
-                                color:#424242;
-                                font-weight: 600;
+                                color:$tertiaryColor;
+                                font-weight: $bold;
                                 display: flex;
                                 justify-content: space-between;
                                 // background-color: #707070;
                             }
                             .total{
-                                color:#BC2327;
-                                font-weight: 700;
+                                color:$primaryColor;
+                                font-weight: $ExtraBold;
                             }
                         }
                         .btnCheckout{
@@ -172,18 +172,18 @@ html{
                             justify-content: center;
                             align-items: center;
                             margin:20px auto;
-                            font-size: 1rem;
+                            font-size: $regularText;
                             font-family: $fontJura;
-                            font-weight: 600;
-                            color: #ffffff;
+                            font-weight: $bold;
+                            color: $whiteColor;
                             border: 1px solid transparent;
-                            background-color: #070707;
-                            transition: all 0.3s ease;
+                            background-color: $blackColor;
+                            transition: $transition;
                             &:hover{
-                                color: #070707;
-                                background-color: #ffffff;
-                                border:1px solid #000000;
-                                font-weight: 600;
+                                color: $blackColor;
+                                background-color:$whiteColor;
+                                border:$btnMenu;
+                                font-weight:$bold;
                             }
                         }
                     }
@@ -207,13 +207,13 @@ html{
             flex-direction: column;
             justify-content:flex-start;
             align-items: flex-start;
-            background-color: #ffffff;
+            background-color: $whiteColor;
             overflow: hidden;
-            box-shadow: 0 0 10px 6px #070707;
+            box-shadow: $boxShadowMenu;
             z-index: 10;
             padding-top: 60px;
             transform: translate(105%);
-            transition: .3s ease-in-out;
+            transition: $transition;
             .wishHeadLine{
                 .closeCross{
                     width:15px;
@@ -222,7 +222,7 @@ html{
                     top:20px;
                     left:35px;
                     transform: rotate(0deg);
-                    transition: all 0.3s ease-in-out;
+                    transition: $transition;
                     &:hover{
                         transform: rotate(90deg);
                     }
@@ -235,13 +235,13 @@ html{
                     flex-direction:column;
                     justify-content: space-between;
                     align-items:flex-start;
-                    margin: 0px auto;
+                    margin: $neutralMargin;
                     .wishlistWord{
                         width: inherit;
-                        font-size: 1.3rem;
+                        font-size: $MediumTitle;
                         font-family: $fontJura;
-                        color:#BC2327;
-                        font-weight: 600;
+                        color:$primaryColor;
+                        font-weight:$bold;
                         margin:0px ;
                     }
                     .wish{
@@ -251,12 +251,12 @@ html{
                             justify-content: space-between;
                             align-items: flex-start;
                             padding: 20px 0px;
-                            border-bottom: 1px solid #e4e4e4;
+                            border-bottom: $borderBottom;
                             .titleWishlist{
-                                font-size: 1rem;
+                                font-size: $regularText;
                                 font-family: $fontJura;
-                                color:#BC2327;
-                                font-weight: 600;
+                                color:$primaryColor;
+                                font-weight: $bold;
                                 margin: 15px 0px;
                             }
                         }
@@ -267,7 +267,7 @@ html{
                                 justify-content: space-between;
                                 align-items: center;
                                 padding: 20px 0px;
-                                border-bottom: 1px solid #e4e4e4;
+                                border-bottom: $borderBottom;
                                 .itemProduct{
                                     width:15%;
                                 }
@@ -276,10 +276,10 @@ html{
                                     flex-direction: column;
                                     margin-left:-40px;
                                     .price{
-                                        font-size: 1rem;
+                                        font-size: $regularText;
                                         font-family: $fontJura;
-                                        color:#BC2327;
-                                        font-weight: 600;
+                                        color:$primaryColor;
+                                        font-weight:$bold;
                                     }
                                     .icons{
                                         img{
@@ -298,11 +298,11 @@ html{
             height: 25px;
             margin-top:70px;
             .shipping{
-                color:#BC2327;
-                font-size:.8rem;
+                color:$primaryColor;
+                font-size:$xSmallText;
                 font-weight: 700;
                 font-family: $fontJura;
-                text-align: center;
+                text-align: $ExtraBold;
                 text-transform: uppercase;
                 animation: shipping 4s linear;
                 @keyframes shipping {
@@ -337,20 +337,20 @@ html{
             .discount{
                 animation: getOff 0.5s linear;
                 .title{
-                    font-size:1rem;
+                    font-size:$regularText;
                     font-family: $fontJura;
-                    color: #ffffff;
+                    color: $whiteColor;
                     text-align: center;
                     writing-mode: vertical-rl;
                     text-orientation: right;
                     transform: rotate(180deg);
-                    font-weight: 600;
+                    font-weight: $bold;
                     cursor: pointer;
-                    background-color: #000000;
+                    background-color: $blackColor;
                     padding: 40px 15px;
-                    transition: all 0.3s ease;
+                    transition: $transition;
                     &:hover{
-                        background-color: #BC2327;
+                        background-color: $primaryColor;
                         // box-shadow: 0 0 4px 2px #BC2327;
                     }
                 }
@@ -374,10 +374,10 @@ html{
                     width:45px;
                     border-radius: 50%;
                     border: 2px solid white;
-                    transition: all 0.3s ease;
+                    transition: $transition;
                     &:hover{
-                        background-color: #BC2327;
-                        border: 2px solid #BC2327;
+                        background-color: $primaryColor;
+                        border: 2px solid $primaryColor;
                     }
                 }
             }
@@ -414,6 +414,6 @@ html{
 }
 .newArrivals, .bestSellers, .containerStore{
     max-width: 1300px;
-    margin: 0px auto;
+    margin:$neutralMargin;
     padding: 0px 30px;
 }
