--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,1 +1,7 @@
 // Mixins
+
+// .newArrivals, .bestSellers, .containerStore{
+//     max-width: 1300px;
+//     margin: 0px auto;
+//     padding: 0px 30px;
+// }
